# mcdm-tool

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
Yeni_layihe/: Cedvel.xlsx
docs/: index.md  installation.md  usage.md
examples/: quick_start_max.py  quick_start_min.py
src/mcdm/: ahp.py  mcdm_io.py  normalisation.py  sensitivity.py  topsis.py  visualisation_interactive.py  visualisation_static.py
tests/: __init__.py  test_io_cat_config.py  test_topsis.py
